[metadata]
name = qg.core
summary = qg.core
description-file =
    README.md
author = zhen.pei,jianing.yang
author-email = jaypei97159@gmail.com,jianingy.yang@gmail.com
home-page = https://github.com/QunarOPS/qg.core
classifier =
    Development Status :: 1 - Planning
    Environment :: MacOS X
    Environment :: Console
    Environment :: No Input/Output (Daemon)
    Environment :: Other Environment
    Environment :: Plugins
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications (115)
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved
    Natural Language :: Chinese (Simplified)
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft
    Programming Language :: Python
    Topic :: Software Development

[files]
packages =
    qg
    qg.core
